deploy/k3s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeta4s
  labels:
    app.kubernetes.io/part-of: zeta4s
